==> bhw10/ENGE-320-Lab-11----Accelerometer/Lab 11/serial.c <==
//------------------------------------------------------------------------------
//             __             __   ___  __
//     | |\ | /  ` |    |  | |  \ |__  /__`
//     | | \| \__, |___ \__/ |__/ |___ .__/
//
//------------------------------------------------------------------------------

#include "serial.h"
#include <avr/interrupt.h>

//------------------------------------------------------------------------------
//      __   ___  ___         ___  __
//     |  \ |__  |__  | |\ | |__  /__`
//     |__/ |___ |    | | \| |___ .__/
//
//------------------------------------------------------------------------------

//------------------------------------------------------------------------------
//     ___      __   ___  __   ___  ___  __
//      |  \ / |__) |__  |  \ |__  |__  /__`
//      |   |  |    |___ |__/ |___ |    .__/
//
//------------------------------------------------------------------------------

//------------------------------------------------------------------------------
//                __          __        ___  __
//     \  /  /\  |__) |  /\  |__) |    |__  /__`
//      \/  /~~\ |  \ | /~~\ |__) |___ |___ .__/
//
//------------------------------------------------------------------------------

volatile uint8_t cur_char;
volatile uint8_t printing;
volatile uint8_t completed;
volatile uint8_t read_char;
static volatile char str[MAX_LENGTH];

//------------------------------------------------------------------------------
//      __   __   __  ___  __  ___      __   ___  __
//     |__) |__) /  \  |  /  \  |  \ / |__) |__  /__`
//     |    |  \ \__/  |  \__/  |   |  |    |___ .__/
//
//------------------------------------------------------------------------------

//------------------------------------------------------------------------------
//      __        __          __
//     |__) |  | |__) |    | /  `
//     |    \__/ |__) |___ | \__,
//
//------------------------------------------------------------------------------

//==============================================================================
void serial_init()
{
	// USART0 Init
	// 8 bit data, 1 stop, no parity
	// Receiver: ON
	// Transmitter: ON
	// Mode: Async
	// USART Baud Rate: 9600
	
	UCSR0A = 0;
	UCSR0B = (1 << RXEN0) | (1 << TXEN0) | (1 << 6) | (1 << 7);
	UCSR0C = (1 << UCSZ01) | (1 << UCSZ00);
	UBRR0H = 0;
	UBRR0L = 0;
	cur_char = 0;
	printing = 0;
}

//==============================================================================
void serial_write(uint8_t data)
{
	// Wait for the empty transmit buffer
	while ( !(UCSR0A & ( 1 << UDRE0)) )
	{
		; // WAIT HEHEHE :P
	}
	
	// Put data into buffer and send it
	UDR0 = data;
}

//==============================================================================
uint8_t serial_read()
{
	//// Wait for data to be received
	//while ( !(UCSR0A & (1 << RXC0)))
	//{
	//	; // WAIT HEHEHE :P
	//}
	//
	//// Get and return the received data
	
	uint8_t new_value = read_char;
	read_char = 0;
	return new_value;
}

//==============================================================================
void serial_print(char new_str[])
{
	if (printing)
	{
		return;
	}
	
	printing = 1;
	cur_char = 0;
	completed = 0;
	for (int i = 0; i < MAX_LENGTH; i++)
	{
		str[i] = new_str[i];
	}
	
	if (str[cur_char] == 0) completed = 1;
	UDR0 = str[cur_char];
	cur_char++;
}

//------------------------------------------------------------------------------
//      __   __              ___  ___
//     |__) |__) | \  /  /\   |  |__
//     |    |  \ |  \/  /~~\  |  |___
//
//------------------------------------------------------------------------------

//------------------------------------------------------------------------------
//      __                  __        __        __
//     /  `  /\  |    |    |__)  /\  /  ` |__/ /__`
//     \__, /~~\ |___ |___ |__) /~~\ \__, |  \ .__/
//
//------------------------------------------------------------------------------

//------------------------------------------------------------------------------
//        __   __  , __
//     | /__` |__)  /__`   
//     | .__/ |  \  .__/
//
//------------------------------------------------------------------------------
ISR(USART_TX_vect)
{
	if (completed)
	{
		printing = 0;
	}
	else
	{
		if (str[cur_char] == 0) completed = 1;
		UDR0 = str[cur_char];
		cur_char++;
	}
}

ISR(USART_RX_vect)
{
	read_char = UDR0;
}
